--- a/install
+++ b/install
@@ -7,7 +7,7 @@
 echo "Installing templify..."
 echo "This will install a binary to /usr/local/bin"
 
-read -p "Are you sure you want to continue? (y/N) " response
+read -p "Are you sure you want to continue? (y/N) " response < /dev/tty
 if [[ ! "$response" =~ ^([yY][eE][sS]|[yY])+$ ]]; then
     echo "No"
     echo "Aborting."
