--- a/install
+++ b/install
@@ -6,12 +6,13 @@
 
 echo "Installing templify..."
 echo "This will install a binary to /usr/local/bin"
-
-read -p "Are you sure you want to continue? (y/N) " response < /dev/tty
-if [[ ! "$response" =~ ^([yY][eE][sS]|[yY])+$ ]]; then
-    echo "No"
-    echo "Aborting."
-    exit 1
+if [ $1 != "-y" ]; then
+  read -p "Are you sure you want to continue? (y/N) " response < /dev/tty
+  if [[ ! "$response" =~ ^([yY][eE][sS]|[yY])+$ ]]; then
+      echo "No"
+      echo "Aborting."
+      exit 1
+  fi
 fi
 echo "Yes"
 
