--- a/install
+++ b/install
@@ -24,6 +24,12 @@ if [[ $version == v* ]]; then
   version=${version:1}
 fi
 
+if [ "$macOS" = true ]; then
+  echo "Installing templify for macOS..."
+else
+  echo "Installing templify for Linux..."
+fi
+
 echo "Installing templify..."
 echo "This will install a binary to $homePath and add it to your PATH."
 if [ "$yesFlag" = false ]; then
@@ -67,10 +73,7 @@ url=https://github.com/cophilot/templify/releases/download/$version/tpy
 
 if [ "$macOS" = true ]; then
   url="$url-macos"
-echo "url: $url"
 fi
-
-exit 0
 
 echo "Creating installation directory $homePath..."
 mkdir -p $homePath/bin
